2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/file-manager/fm-tree-view.c (got_activation_uri_callback),
	(selection_changed_timer_callback), (fm_tree_view_activate_file),
	(fm_tree_view_open_cb), (fm_tree_view_open_in_new_tab_cb),
	(fm_tree_view_open_in_new_window_cb), (create_popup_menu):
	Add mnemonic to "Open in New Window" and add "Open in New Tab" in 
	tree view sidebar.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/nautilus-places-sidebar.c (bookmarks_button_press_event_cb):
	Middle click on entry in places sidebar to open a new tab.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/file-manager/fm-directory-view.c (directory_view_entries),
	(real_update_location_menu), (real_update_menus):
	Add mnemonics to "Open in New Window", "Open in New Tab", etc.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* configure.in:
	Fixed typo, thanks Christopher Bratusek.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/nautilus-navigation-window.c (notebook_popup_menu_move_left_cb),
	(notebook_popup_menu_move_right_cb), (notebook_popup_menu_close_cb),
	(notebook_popup_menu_show), (notebook_popup_menu_cb),
	(notebook_button_press_cb), (nautilus_navigation_window_init):
	Add popup menu to tabs with "Move Tab Left", "Move Tab Right", and
	"Close Tab"

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/nautilus-window-manage-views.c
	(nautilus_window_slot_open_location_full):
	Do not skip begin_location_change if opening the same location in 
	the same window but a different slot.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/nautilus-places-sidebar.c (open_selected_bookmark),
	(open_shortcut_from_menu), (open_shortcut_cb),
	(open_shortcut_in_new_window_cb), (open_shortcut_in_new_tab_cb),
	(bookmarks_build_popup_menu):
	Add "Open in New Tab" to Places sidebar context menu.

2008-05-31  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window.c (get_first_inactive_slot),
	(nautilus_window_slot_close):